--- a/index.html
+++ b/index.html
@@ -2,69 +2,85 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Резюме</title>
+  <title>Resume</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
 </head>
 <body>
 
 <div class="container">
-  <h1 align="center">Иванющенко Максим Валерьевич</h1>
+  <h1 align="center">Ivanyuschenko Maxim</h1>
 
   <div class="row">
     <div class="six columns">
       <img src="photo.png" width="80%" align="left" alt="Photo">
-    </div><br><br>
+    </div>
+    <br><br>
 
     <div class="six columns" align="left">
-      <p>25 лет, родился 6 декабря 1997</p>
+      <p>25 years old, born on December 6, 1997</p>
       <p>+7(913)-437-52-19<br>
         i-eg54125@mail.ru</p>
-      <p>Проживает: Казахстан, Караганда<br>
-        Гражданство: Россия<br>
-        Разрешение на работу: Россия</p>
+      <p>Lives: Kazakhstan, Karaganda<br>
+        Сitizenship: Russia<br>
+        Work permit: Russia</p>
     </div>
-  </div><br>
+  </div>
+  <br>
 
   <div>
-    <h4><b>Мастер по ремонту бытовых холодильников</b></h4>
+    <h4><b>Ruby on Rails Developer</b></h4>
+  </div>
+
+  <div>
+    <h4>Skills</h4>
     <ul>
-      <li>Сервисный инженер, инженер-механик</li>
-      <li>Мастер по ремонту оборудования, техники</li>
+      <li>Ruby</li>
+      <li>Ruby on Rails</li>
+      <li>HTML/CSS</li>
+      <li>SQLite</li>
+      <li>RSpec</li>
+      <li>Git</li>
     </ul>
   </div>
 
   <div>
-    <h4>Опыт работы</h4>
-    <h5><b>ООО "ВЕКТОР"</b><br>Декабрь 2021 — Август 2022</h5>
-    <p><b>Кемерово</b><br>
-      Электроника, приборостроение, бытовая техника, компьютеры и оргтехника</p>
+    <h4>Implemented Projects</h4>
     <ul>
-      <li>Бытовая техника, электроника, климатическое оборудование (монтаж, сервис, ремонт)</li>
+      <li><a href="https://github.com/ropirog/hangman">Hangman</a></li>
+      <li><a href="https://github.com/ropirog/magic_ball">Magic ball</a></li>
     </ul>
   </div>
 
   <div>
-    <h4>Образование</h4>
-    <h5>Бакалавр 2016 — 2020</h5>
-    <p><b>Кемеровский государственный университет, Кемерово</b><br>
-      Институт инженерных технологий, Холодильная, криогенная техника и кондиционирование</p>
+    <h4>Work Experience</h4>
+    <h5><b>"VECTOR"</b><br>December 2021 — August 2022</h5>
+    <p><b>Kemerovo</b><br>
+      Electronics, instrumentation, household appliances, computers and office equipment</p>
+    <ul>
+      <li>Household appliances, electronics, climate control equipment (installation, service, repair)</li>
+    </ul>
   </div>
 
   <div>
-    <h4>Ключевые навыки</h4>
-    <h5>Знание языков</h5>
+    <h4>Education</h4>
+    <h5>BSc 2016 — 2020</h5>
+    <p><b>Kemerovo State University, Kemerovo</b><br>
+      The Institute of Engineering Technologies: Refrigeration, Cryogenics and Life Support Systems</p>
+  </div>
+
+  <div>
+    <h4>About Me</h4>
     <ul>
-      <li>Русский — родной</li>
-      <li>Английский — Pre-Intermediate(B1)</li>
+      <li>Russian — native</li>
+      <li>English — Pre-Intermediate(B1)</li>
     </ul>
     <ul>
-      <li>Ответственность</li>
-      <li>Коммуникабельность</li>
-      <li>Неконфликтность</li>
+      <li>Responsibility</li>
+      <li>Communication skills</li>
+      <li>Non-conflict person</li>
     </ul>
   </div>
-</div>
 </div>
 </body>
 </html>
