Refactor the cv

--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
 
     <div class="six columns" align="left">
       <p>25 years old, born on December 6, 1997</p>
-      <p>+7(913)-437-52-19<br>
+      <p>+7(706)-699-52-19<br>
         i-eg54125@mail.ru</p>
       <p>Lives: Kazakhstan, Karaganda<br>
-        Сitizenship: Russia<br>
-        Work permit: Russia</p>
+        Сitizenship: Russia<br></p>
     </div>
   </div>
   <br>
@@ -38,7 +37,12 @@
       <li>Ruby</li>
       <li>Ruby on Rails</li>
       <li>HTML/CSS</li>
+      <li>Сonfiguring the VPS</li>
       <li>SQLite</li>
+      <li>PostgreSQL</li>
+      <li>Capistrano</li>
+      <li>Nginx/Passenger/Puma</li>
+      <li>Amazon S3</li>
       <li>RSpec</li>
       <li>Git</li>
     </ul>
@@ -49,6 +53,11 @@
     <ul>
       <li><a href="https://github.com/ropirog/hangman">Hangman</a></li>
       <li><a href="https://github.com/ropirog/magic_ball">Magic ball</a></li>
+      <li><a href="https://github.com/ropirog/askme">Ask Me (git)</a></li>
+      <li><a href="http://myapp-s.space">Ask Me (VPS)</a></li>
+      <li><a href="https://github.com/ropirog/bbq">Event Manager (git)</a></li>
+      <li><a href="http://bbq.myapp-s.space">Event Manager (VPS)</a></li>
+      <li><a href="https://github.com/ropirog/khsm">Who Wants to Be a Millionaire?</a></li>
     </ul>
   </div>
 
@@ -67,6 +76,10 @@
     <h5>BSc 2016 — 2020</h5>
     <p><b>Kemerovo State University, Kemerovo</b><br>
       The Institute of Engineering Technologies: Refrigeration, Cryogenics and Life Support Systems</p>
+
+    <h5>2022 — 2023</h5>
+    <p><b>Online Ruby on Rails courses</b><br>
+      The good programmer school
   </div>
 
   <div>
